# serializer version: 1
# name: test_pipeline_abonnements_annee_complete_snapshot
  list([
    dict({
      'debut': datetime.datetime(2024, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 janvier 2024',
      'fin': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 février 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-01',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 février 2024',
      'fin': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mars 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-02',
      'nb_jours': 29,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.25,
    }),
    dict({
      'debut': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mars 2024',
      'fin': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 avril 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-03',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 avril 2024',
      'fin': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mai 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-04',
      'nb_jours': 30,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.57,
    }),
    dict({
      'debut': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mai 2024',
      'fin': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juin 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-05',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juin 2024',
      'fin': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juillet 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-06',
      'nb_jours': 30,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.57,
    }),
    dict({
      'debut': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juillet 2024',
      'fin': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 août 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-07',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 août 2024',
      'fin': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 septembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-08',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 septembre 2024',
      'fin': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 octobre 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-09',
      'nb_jours': 30,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.57,
    }),
    dict({
      'debut': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 octobre 2024',
      'fin': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 novembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-10',
      'nb_jours': 31,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.89,
    }),
    dict({
      'debut': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 novembre 2024',
      'fin': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 décembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-11',
      'nb_jours': 30,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.97,
    }),
    dict({
      'debut': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 décembre 2024',
      'fin': datetime.datetime(2024, 12, 31, 23, 59, 59, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '31 décembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCU4',
      'mois_annee': '2024-12',
      'nb_jours': 30,
      'pdl': 'PDL88888',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF888',
      'turpe_fixe_eur': 9.97,
    }),
  ])
# ---
# name: test_pipeline_abonnements_colonnes_critiques_snapshot
  list([
    dict({
      'debut': datetime.datetime(2024, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 29,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 2, 1, 9, 30, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 29,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
    dict({
      'debut': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin': datetime.datetime(2024, 12, 31, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
    }),
  ])
# ---
# name: test_pipeline_abonnements_snapshot
  list([
    dict({
      'debut': datetime.datetime(2024, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 janvier 2024',
      'fin': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 février 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-01',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 février 2024',
      'fin': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mars 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-02',
      'nb_jours': 29,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 7.56,
    }),
    dict({
      'debut': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mars 2024',
      'fin': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 avril 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-03',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 avril 2024',
      'fin': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mai 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-04',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 7.82,
    }),
    dict({
      'debut': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mai 2024',
      'fin': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juin 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-05',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juin 2024',
      'fin': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juillet 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-06',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 7.82,
    }),
    dict({
      'debut': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juillet 2024',
      'fin': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 août 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-07',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 août 2024',
      'fin': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 septembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-08',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 septembre 2024',
      'fin': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 octobre 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-09',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 7.82,
    }),
    dict({
      'debut': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 octobre 2024',
      'fin': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 novembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-10',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.08,
    }),
    dict({
      'debut': datetime.datetime(2024, 2, 1, 9, 30, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 février 2024',
      'fin': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mars 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-02',
      'nb_jours': 29,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 11.57,
    }),
    dict({
      'debut': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mars 2024',
      'fin': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 avril 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-03',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.36,
    }),
    dict({
      'debut': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 avril 2024',
      'fin': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 mai 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-04',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 11.96,
    }),
    dict({
      'debut': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 mai 2024',
      'fin': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juin 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-05',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.36,
    }),
    dict({
      'debut': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juin 2024',
      'fin': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 juillet 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-06',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 11.96,
    }),
    dict({
      'debut': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 juillet 2024',
      'fin': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 août 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-07',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.36,
    }),
    dict({
      'debut': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 août 2024',
      'fin': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 septembre 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-08',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.36,
    }),
    dict({
      'debut': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 septembre 2024',
      'fin': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 octobre 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-09',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 11.96,
    }),
    dict({
      'debut': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 octobre 2024',
      'fin': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 novembre 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-10',
      'nb_jours': 31,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.36,
    }),
    dict({
      'debut': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 novembre 2024',
      'fin': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 décembre 2024',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-11',
      'nb_jours': 30,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.2,
    }),
    dict({
      'debut': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 décembre 2024',
      'fin': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 janvier 2025',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'mois_annee': '2024-12',
      'nb_jours': 31,
      'pdl': 'PDL00001',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'turpe_fixe_eur': 8.47,
    }),
    dict({
      'debut': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 novembre 2024',
      'fin': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '01 décembre 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-11',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.46,
    }),
    dict({
      'debut': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'debut_lisible': '01 décembre 2024',
      'fin': datetime.datetime(2024, 12, 31, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'fin_lisible': '31 décembre 2024',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'mois_annee': '2024-12',
      'nb_jours': 30,
      'pdl': 'PDL00002',
      'puissance_souscrite_hcb_kva': None,
      'puissance_souscrite_hch_kva': None,
      'puissance_souscrite_hpb_kva': None,
      'puissance_souscrite_hph_kva': None,
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'turpe_fixe_eur': 12.46,
    }),
  ])
# ---
# name: test_pipeline_energie_aggrege_snapshot
  list([
  ])
# ---
# name: test_pipeline_energie_snapshot
  list([
  ])
# ---
# name: test_pipeline_historique_pdl_unique_snapshot
  list([
    dict({
      'avant_formule_tarifaire_acheminement': None,
      'avant_puissance_souscrite': None,
      'date_evenement': datetime.datetime(2024, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'MES',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'flux_C15',
      'type_compteur': 'LINKY',
      'type_evenement': 'reel',
      'type_fait': 'evenement',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL99999',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF999',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
  ])
# ---
# name: test_pipeline_historique_snapshot
  list([
    dict({
      'avant_formule_tarifaire_acheminement': None,
      'avant_puissance_souscrite': None,
      'date_evenement': datetime.datetime(2024, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'MES',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'flux_C15',
      'type_compteur': 'LINKY',
      'type_evenement': 'reel',
      'type_fait': 'evenement',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 2, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFCUST',
      'avant_puissance_souscrite': 6.0,
      'date_evenement': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFCUST',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00001',
      'puissance_souscrite_kva': 6.0,
      'ref_situation_contractuelle': 'REF001',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': None,
      'avant_puissance_souscrite': None,
      'date_evenement': datetime.datetime(2024, 2, 1, 9, 30, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'MES',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'flux_C15',
      'type_compteur': 'LINKY',
      'type_evenement': 'reel',
      'type_fait': 'evenement',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 3, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 4, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 5, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 6, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 7, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 8, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 9, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 10, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 11, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 12, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'EN SERVICE',
      'evenement_declencheur': 'FACTURATION',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'synthese_mensuelle',
      'type_compteur': 'LINKY',
      'type_evenement': 'artificiel',
      'type_fait': 'facturation',
    }),
    dict({
      'avant_formule_tarifaire_acheminement': 'BTINFMUDT',
      'avant_puissance_souscrite': 9.0,
      'date_evenement': datetime.datetime(2024, 12, 31, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Paris')),
      'etat_contractuel': 'RESILIE',
      'evenement_declencheur': 'RES',
      'formule_tarifaire_acheminement': 'BTINFMUDT',
      'impacte_abonnement': True,
      'num_compteur': 'C0000001',
      'pdl': 'PDL00002',
      'puissance_souscrite_kva': 9.0,
      'ref_situation_contractuelle': 'REF002',
      'resume_modification': '',
      'segment_clientele': 'C5',
      'source': 'flux_C15',
      'type_compteur': 'LINKY',
      'type_evenement': 'reel',
      'type_fait': 'evenement',
    }),
  ])
# ---
# name: test_pipeline_historique_structure_snapshot
  dict({
    'columns': list([
      'date_evenement',
      'pdl',
      'ref_situation_contractuelle',
      'source',
      'type_fait',
      'evenement_declencheur',
      'type_evenement',
      'puissance_souscrite_kva',
      'formule_tarifaire_acheminement',
      'etat_contractuel',
      'segment_clientele',
      'type_compteur',
      'num_compteur',
      'avant_puissance_souscrite',
      'avant_formule_tarifaire_acheminement',
      'impacte_abonnement',
      'resume_modification',
    ]),
    'dtypes': list([
      "Datetime(time_unit='us', time_zone='Europe/Paris')",
      'String',
      'String',
      'String',
      'String',
      'String',
      'String',
      'Float64',
      'String',
      'String',
      'String',
      'String',
      'String',
      'Float64',
      'String',
      'Boolean',
      'String',
    ]),
    'shape': tuple(
      25,
      17,
    ),
  })
# ---
